//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Organization {
  id String [pk]
  name String [not null]
  vat String [unique]
  country String [not null]
  logoUrl String
  users User [not null]
  customers Customer [not null]
  invoices Invoice [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table User {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  role Role [not null, default: 'staff']
  orgId String [not null]
  org Organization [not null]
  sessions Session [not null]
  createdAt DateTime [default: `now()`, not null]
  Invoice Invoice [not null]
}

Table Session {
  id String [pk]
  userId String [not null]
  user User [not null]
  expires DateTime [not null]
  sessionToken String [unique, not null]
}

Table VerificationToken {
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [pk]
  }
}

Table Customer {
  id String [pk]
  orgId String [not null]
  org Organization [not null]
  name String [not null]
  vat String
  email String
  address String
  country String
  currency String [not null, default: 'EUR']
  invoices Invoice [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table Invoice {
  id String [pk]
  orgId String [not null]
  org Organization [not null]
  userId String [not null]
  user User [not null]
  customerId String [not null]
  customer Customer [not null]
  direction Direction [not null, default: 'OUTBOUND']
  number Int [not null]
  status InvoiceStatus [not null, default: 'draft']
  currency String [not null, default: 'EUR']
  issuedAt DateTime [not null]
  dueAt DateTime [not null]
  subtotal Decimal [not null]
  taxTotal Decimal [not null]
  total Decimal [not null]
  subtotalEur Decimal
  totalEur Decimal
  fxRate Decimal
  peppolXmlUrl String
  pdfUrl String
  stripeLinkId String
  lines InvoiceLine [not null]
  payments Payment [not null]
  deliveries PeppolDelivery [not null]
  notes InvoiceNote [not null]
  createdAt DateTime [default: `now()`, not null]

  indexes {
    (orgId, number) [unique]
  }
}

Table InvoiceLine {
  id String [pk]
  invoiceId String [not null]
  invoice Invoice [not null]
  description String [not null]
  qty Decimal [not null]
  unitPrice Decimal [not null]
  taxRate Decimal [not null, default: 0]
  lineTotal Decimal [not null]
}

Table InvoiceNote {
  id String [pk]
  invoiceId String [not null]
  invoice Invoice [not null]
  text String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table Payment {
  id String [pk]
  invoiceId String [not null]
  invoice Invoice [not null]
  amount Decimal [not null]
  currency String [not null]
  method PayMethod [not null]
  providerRef String
  paidAt DateTime [not null]
}

Table PeppolDelivery {
  id String [pk]
  invoiceId String [not null]
  invoice Invoice [not null]
  msgId String [unique, not null]
  channel DeliveryChan [not null]
  status DeliveryStatus [not null]
  createdAt DateTime [default: `now()`, not null]
  deliveredAt DateTime
}

Table CurrencyFX {
  day DateTime [not null]
  from String [not null]
  to String [not null, default: 'EUR']
  rate Decimal [not null]

  indexes {
    (day, from, to) [pk]
  }
}

Table AuditLog {
  id String [pk]
  orgId String
  tableName String [not null]
  rowId String [not null]
  action AuditAction [not null]
  diff Json
  userId String
  createdAt DateTime [default: `now()`, not null]
}

Enum Role {
  admin
  staff
  accountant
}

Enum InvoiceStatus {
  draft
  sent
  delivered
  paid
  overdue
  void
}

Enum Direction {
  OUTBOUND
  INBOUND
}

Enum DeliveryChan {
  peppol
  hermes
  email
}

Enum PayMethod {
  stripe
  cash
  banktransfer
  sepa
}

Enum DeliveryStatus {
  queued
  sent
  delivered
  failed
}

Enum AuditAction {
  INSERT
  UPDATE
  DELETE
  LOGIN
}

Ref: User.orgId > Organization.id

Ref: Session.userId > User.id

Ref: Customer.orgId > Organization.id

Ref: Invoice.orgId > Organization.id

Ref: Invoice.userId > User.id

Ref: Invoice.customerId > Customer.id

Ref: InvoiceLine.invoiceId > Invoice.id

Ref: InvoiceNote.invoiceId > Invoice.id

Ref: Payment.invoiceId > Invoice.id

Ref: PeppolDelivery.invoiceId > Invoice.id